# terminal-translator

./: README.md  main.py  pyproject.toml
