[project]
name = "terminal-translator"
version = "0.1.0"
description = "Local translation app built for the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.2",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "textual-dev>=1.8.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]